crates/cribo/tests/snapshots/execution_results@inlined_decorator_same_name_import.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/inlined_decorator_same_name_import/main.py
---
ExecutionResults {
    status: Success,
    stdout: "same object: True\nmodule: textwrap\ncall: indented",
    stderr: "",
}
