crates/cribo/tests/snapshots/execution_results@inlined_decorator_shared_identity.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/inlined_decorator_shared_identity/main.py
---
ExecutionResults {
    status: Success,
    stdout: "same object: True\nmodule: shared\nqualname: canonical\ncall: canonical result",
    stderr: "",
}
