crates/cribo/tests/snapshots/execution_results@inlined_import_globals.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/inlined_import_globals/main.py
---
ExecutionResults {
    status: Success,
    stdout: "package: provider\nname: provider.worker\ndoc: The worker module's docstring.",
    stderr: "",
}
