crates/cribo/tests/snapshots/execution_results@lambda_walrus_scope.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/lambda_walrus_scope/main.py
---
ExecutionResults {
    status: Success,
    stdout: "unbound",
    stderr: "",
}
