crates/cribo/tests/snapshots/execution_results@machinery_deleted_export_pickle.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/machinery_deleted_export_pickle/main.py
---
ExecutionResults {
    status: Success,
    stdout: "Entry kept",
    stderr: "",
}
