crates/cribo/tests/snapshots/execution_results@machinery_destructured_exports.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/machinery_destructured_exports/main.py
---
ExecutionResults {
    status: Success,
    stdout: "True True True right value",
    stderr: "",
}
