crates/cribo/tests/snapshots/execution_results@machinery_failed_import_leaked_reference.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/machinery_failed_import_leaked_reference/main.py
---
ExecutionResults {
    status: Success,
    stdout: "caught: first attempt fails\nready: ready\ndistinct: True 2",
    stderr: "",
}
