crates/cribo/tests/snapshots/execution_results@machinery_failed_replacement_cleanup.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/machinery_failed_replacement_cleanup/main.py
---
ExecutionResults {
    status: Success,
    stdout: "caught: first attempt fails\nentry present: False\nready",
    stderr: "",
}
