crates/cribo/tests/snapshots/execution_results@machinery_failed_wrapper_retry.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/machinery_failed_wrapper_retry/main.py
---
ExecutionResults {
    status: Success,
    stdout: "helper executing 1\ncaught: first attempt fails\nhelper executing 2\nready",
    stderr: "",
}
