crates/cribo/tests/snapshots/execution_results@machinery_inlined_namespace_exports.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/machinery_inlined_namespace_exports/main.py
---
ExecutionResults {
    status: Success,
    stdout: "True True 1.2.3",
    stderr: "",
}
