crates/cribo/tests/snapshots/execution_results@machinery_module_type.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/machinery_module_type/main.py
---
ExecutionResults {
    status: Success,
    stdout: "True True\nTrue\nTrue True 1.0",
    stderr: "",
}
